--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <header class="page-header" role="banner" style="color:#0060a9;">
-      <img src="logo_trimmed.png"></img>
+    <header class="page-header" role="banner" style="backgroundColor:#0060a9;">
+      <img style="max-height:140px" src="logo_trimmed.png"></img>
     </header>
 
     <main id="content" class="main-content" role="main">
