--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <header class="page-header" role="banner" style="background-color:#0060a9;">
+    <header class="page-header" role="banner" style="background-color:#0060a9; background-image:none;">
       <img style="max-height:140px" src="logo_trimmed.png"></img>
     </header>
 
