--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="page-header" role="banner" style="background-color:#0060a9; background-image:none;">
-      <img style="max-height:140px" src="logo_trimmed.png"></img>
+      <img style="max-height:50%" src="logo_trimmed.png"></img>
     </header>
 
     <main id="content" class="main-content" role="main">
